test/syntax/solidity_not_support/nameAndTypeResolution/543_warn_about_address_members_on_contract_send.sol
contract C {
    function f() view public {
        this.send;
    }
}
// ----
// ParserError 2314: (57-61): Expected identifier but got 'send'
